--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "forever": "^4.0.3",
     "googleapis": "^92.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
