--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "cron": "^2.3.0",
     "dotenv": "^10.0.0",
     "forever": "^4.0.3",
     "googleapis": "^92.0.0",
